// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Navigation tests default renderer 1`] = `
<div
  className="Navigation"
>
  <WithStyles(FullScreenDialog)
    onClose={[Function]}
    onSubmit={[Function]}
    open={true}
    title={
      <FormattedMessage
        defaultMessage="Navigation"
        id="cboard.components.Settings.Navigation.navigation"
        values={Object {}}
      />
    }
  >
    <WithStyles(Paper)>
      <WithStyles(List)>
        <WithStyles(ListItem)>
          <WithStyles(ListItemText)
            primary={
              <FormattedMessage
                defaultMessage="Enable text..."
                id="cboard.components.Settings.Navigation.enable"
                values={Object {}}
              />
            }
            secondary={
              <FormattedMessage
                defaultMessage="some text secondary"
                id="cboard.components.Settings.Navigation.enableSecondary"
                values={Object {}}
              />
            }
          />
          <WithStyles(ListItemSecondaryAction)>
            <WithStyles(Switch)
              color="primary"
              onChange={[Function]}
              value="active"
            />
          </WithStyles(ListItemSecondaryAction)>
        </WithStyles(ListItem)>
        <WithStyles(ListItem)>
          <WithStyles(ListItemText)
            primary={
              <FormattedMessage
                values={Object {}}
              />
            }
            secondary={
              <FormattedMessage
                values={Object {}}
              />
            }
          />
          <WithStyles(ListItemSecondaryAction)>
            <WithStyles(Switch)
              color="primary"
              onChange={[Function]}
              value="active"
            />
          </WithStyles(ListItemSecondaryAction)>
        </WithStyles(ListItem)>
        <WithStyles(ListItem)
          disabled={true}
        >
          <WithStyles(ListItemText)
            primary={
              <FormattedMessage
                values={Object {}}
              />
            }
            secondary={
              <FormattedMessage
                values={Object {}}
              />
            }
          />
          <WithStyles(ListItemSecondaryAction)>
            <WithStyles(Switch)
              color="primary"
              disabled={true}
              onChange={[Function]}
              value="active"
            />
          </WithStyles(ListItemSecondaryAction)>
        </WithStyles(ListItem)>
      </WithStyles(List)>
    </WithStyles(Paper)>
  </WithStyles(FullScreenDialog)>
</div>
`;

exports[`Navigation tests switchs behavior 1`] = `
<div
  className="Navigation"
>
  <WithStyles(FullScreenDialog)
    onClose={[Function]}
    onSubmit={[Function]}
    open={true}
    title={
      <FormattedMessage
        defaultMessage="Navigation"
        id="cboard.components.Settings.Navigation.navigation"
        values={Object {}}
      />
    }
  >
    <WithStyles(Paper)>
      <WithStyles(List)>
        <WithStyles(ListItem)>
          <WithStyles(ListItemText)
            primary={
              <FormattedMessage
                defaultMessage="Enable text..."
                id="cboard.components.Settings.Navigation.enable"
                values={Object {}}
              />
            }
            secondary={
              <FormattedMessage
                defaultMessage="some text secondary"
                id="cboard.components.Settings.Navigation.enableSecondary"
                values={Object {}}
              />
            }
          />
          <WithStyles(ListItemSecondaryAction)>
            <WithStyles(Switch)
              color="primary"
              onChange={[Function]}
              value="active"
            />
          </WithStyles(ListItemSecondaryAction)>
        </WithStyles(ListItem)>
        <WithStyles(ListItem)>
          <WithStyles(ListItemText)
            primary={
              <FormattedMessage
                values={Object {}}
              />
            }
            secondary={
              <FormattedMessage
                values={Object {}}
              />
            }
          />
          <WithStyles(ListItemSecondaryAction)>
            <WithStyles(Switch)
              color="primary"
              onChange={[Function]}
              value="active"
            />
          </WithStyles(ListItemSecondaryAction)>
        </WithStyles(ListItem)>
        <WithStyles(ListItem)
          disabled={true}
        >
          <WithStyles(ListItemText)
            primary={
              <FormattedMessage
                values={Object {}}
              />
            }
            secondary={
              <FormattedMessage
                values={Object {}}
              />
            }
          />
          <WithStyles(ListItemSecondaryAction)>
            <WithStyles(Switch)
              color="primary"
              disabled={true}
              onChange={[Function]}
              value="active"
            />
          </WithStyles(ListItemSecondaryAction)>
        </WithStyles(ListItem)>
      </WithStyles(List)>
    </WithStyles(Paper)>
  </WithStyles(FullScreenDialog)>
</div>
`;

exports[`Navigation tests switchs behavior 2`] = `
<div
  className="Navigation"
>
  <WithStyles(FullScreenDialog)
    onClose={[Function]}
    onSubmit={[Function]}
    open={true}
    title={
      <FormattedMessage
        defaultMessage="Navigation"
        id="cboard.components.Settings.Navigation.navigation"
        values={Object {}}
      />
    }
  >
    <WithStyles(Paper)>
      <WithStyles(List)>
        <WithStyles(ListItem)>
          <WithStyles(ListItemText)
            primary={
              <FormattedMessage
                defaultMessage="Enable text..."
                id="cboard.components.Settings.Navigation.enable"
                values={Object {}}
              />
            }
            secondary={
              <FormattedMessage
                defaultMessage="some text secondary"
                id="cboard.components.Settings.Navigation.enableSecondary"
                values={Object {}}
              />
            }
          />
          <WithStyles(ListItemSecondaryAction)>
            <WithStyles(Switch)
              checked={true}
              color="primary"
              onChange={[Function]}
              value="active"
            />
          </WithStyles(ListItemSecondaryAction)>
        </WithStyles(ListItem)>
        <WithStyles(ListItem)>
          <WithStyles(ListItemText)
            primary={
              <FormattedMessage
                values={Object {}}
              />
            }
            secondary={
              <FormattedMessage
                values={Object {}}
              />
            }
          />
          <WithStyles(ListItemSecondaryAction)>
            <WithStyles(Switch)
              checked={true}
              color="primary"
              onChange={[Function]}
              value="active"
            />
          </WithStyles(ListItemSecondaryAction)>
        </WithStyles(ListItem)>
        <WithStyles(ListItem)
          disabled={true}
        >
          <WithStyles(ListItemText)
            primary={
              <FormattedMessage
                values={Object {}}
              />
            }
            secondary={
              <FormattedMessage
                values={Object {}}
              />
            }
          />
          <WithStyles(ListItemSecondaryAction)>
            <WithStyles(Switch)
              color="primary"
              disabled={true}
              onChange={[Function]}
              value="active"
            />
          </WithStyles(ListItemSecondaryAction)>
        </WithStyles(ListItem)>
      </WithStyles(List)>
    </WithStyles(Paper)>
  </WithStyles(FullScreenDialog)>
</div>
`;
